- Different fixes linked to issues #33 (jamiiforums), #43 (qq), #42 (buzznet) and #44 (pixls substitutes rawtherapee).
- Bringing back forosperu, hellboundhackers, ivoox and linkedin.
- A fix has been introduced in the --fuzz option of usufy.py so as not to stop when a matching pattern has been found.
- Update in the README file.

0.9.14, 2016/01/21 -- Mitigation of several fixes. 
- Fix to issues #46, #47, #48, #49. Mitigating #40, #42, #43, #44, 45.
- Modification of the Welcome banner for the different utilities. Back to normal.

0.9.13, 2015/11/26 -- Modifications for the Cybercamp. 
- Modification of the Welcome banner for the different utilities.
- Changed the default extension to .xls as stated in the help.
- Added a new phonefy platform: infotelefonica.es.
- Modified the name of the listaspam platform from "listspam" to "listaspam".

0.9.12, 2015/11/18 -- Addition of Periscope. 
- Addition of a wrapper for Periscope.
- Imported in the setup.py the local osrframework folder to grab the current version number.
- Fixed some errors in the messages displayed.

0.9.11, 2015/11/13 -- Addition of a new searchfy platform to look for PGP keys, as well as new platforms for mailfy.
- Added the search in the PGP public key repository by the MIT.
- Fixed a change in garage4hackers platform.
- Added new wikipediafr and wikipediapt user search.
- The platform thehoodup now waits for credentials.
- Added the sina.com email provider to mailfy.py.
- Added a message to urge the users to report any issue to <https://github.com/i3visio/osrframework/issues>.
- Added a message in mailfy.py when being run under Windows systems to let them know that the app. may behave unexpectedly.
- Corrected a mistake related to matplotlib.
- Added a banner text to each script of the framework showing the current version of the libraries.

0.9.10, 2015/10/26 -- Updated the error messages of burbuja.info in response to issue #32.