@@ -31,7 +31,7 @@ __author__ = "Felix Brezo, Yaiza Rubio "
 __copyright__ = "Copyright 2015, i3visio"
 __credits__ = ["Felix Brezo", "Yaiza Rubio"]
 __license__ = "GPLv3+"
-__version__ = "v3.0.5"
+__version__ = "v3.0.6"
 __maintainer__ = "Felix Brezo, Yaiza Rubio"
 __email__ = "contacto@i3visio.com"
 
@@ -111,11 +111,11 @@ def fuzzUsufy(fDomains = None, fFuzzStruct = None):
 
     # Going through all the lines
     for l in lines:
-        domain = l.split('\t')[0]
+        domain = l.split()[0]
         print "Performing tests for" + domain + "..."
 
         # selecting the number of nicks to be tested in this domain
-        nick = l.split('\t')[1]
+        nick = l.split()[1]
 
         # Choosing the errors from the input file
         #errors = l.split('\t')[2:]
@@ -133,8 +133,7 @@ def fuzzUsufy(fDomains = None, fFuzzStruct = None):
                 html = i3Browser.recoverURL(test)
                 if nick in html:
                     possibleURL.append(test)
-                    print "Usufy found!!!\n"
-                    #break
+                    print "\tPossible usufy found!!!\n"
             except:
                 logger.error("The resource could not be downloaded.")
 
