@@ -7,6 +7,7 @@ For more information, check the README.md in <http://github.com/i3visio/osrframe
 - Different fixes linked to issues #33 (jamiiforums), #43 (qq), #42 (buzznet) and #44 (pixls substitutes rawtherapee).
 - Bringing back forosperu, hellboundhackers, ivoox and linkedin.
 - A fix has been introduced in the --fuzz option of usufy.py so as not to stop when a matching pattern has been found.
+- Addressed issue #61: usufy.py --fuzz sample.txt now uses as separator either a '\t' or a ' '.
 - Update in the README file.
 
 0.9.14, 2016/01/21 -- Mitigation of several fixes. 
